<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Value TextView-->


    <TextView
        android:id="@+id/calculateFunctionView"
        android:layout_width="168.5dp"
        android:layout_height="45dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/calculateMainText"
        app:layout_constraintLeft_toLeftOf="@id/calculateMainText" />

    <TextView
        android:id="@+id/calculateMainText"
        android:layout_width="337dp"
        android:layout_height="90dp"
        android:text=""
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="380dp"
        android:layout_height="375dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/divideButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/divide"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/multiply"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/subtract"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="75dp"
            android:layout_height="150dp"
            android:text="@string/add"
            app:layout_column="3"
            app:layout_row="1"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/seven"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/eight"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/nine"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/fourButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/four"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/five"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/six"
            app:iconTint="#673AB7"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="75dp"
            android:layout_height="150dp"
            android:text="@string/enter"
            app:layout_column="3"
            app:layout_row="3"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/oneButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/one"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/two"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/three"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="198dp"
            android:layout_height="75dp"
            android:text="@string/zero"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/decimalButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/decimal"
            app:layout_column="2"
            app:layout_row="4" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>